--- a/code/model_training.ipynb
+++ b/code/model_training.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -147,6 +147,7 @@
     "def encoder_block(input_layer, filters, strides):\n",
     "    \n",
     "    # TODO Create a separable convolution layer using the separable_conv2d_batchnorm() function.\n",
+    "    output_layer = separable_conv2d_batchnorm(input_layer, filters, strides)\n",
     "    \n",
     "    return output_layer"
    ]
@@ -164,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -173,10 +174,14 @@
     "def decoder_block(small_ip_layer, large_ip_layer, filters):\n",
     "    \n",
     "    # TODO Upsample the small input layer using the bilinear_upsample() function.\n",
-    "    \n",
+    "    upsampled_layer = bilinear_upsample(small_ip_layer)\n",
+    "        \n",
     "    # TODO Concatenate the upsampled and large input layers using layers.concatenate\n",
+    "    output_layer = layers.concatenate([upsampled_layer, large_ip_layer])\n",
     "    \n",
     "    # TODO Add some number of separable convolution layers\n",
+    "    output_layer = separable_conv2d_batchnorm(output_layer, filters)\n",
+    "    output_layer = separable_conv2d_batchnorm(output_layer, filters)\n",
     "    \n",
     "    return output_layer"
    ]
@@ -197,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -207,11 +212,21 @@
     "    \n",
     "    # TODO Add Encoder Blocks. \n",
     "    # Remember that with each encoder layer, the depth of your model (the number of filters) increases.\n",
-    "\n",
+    "    x1 = encoder_block(inputs, 16, 2)\n",
+    "    x2 = encoder_block(x1, 32, 2)\n",
+    "    x3 = encoder_block(x2, 64, 2)\n",
+    "    x4 = encoder_block(x3, 128, 2)\n",
+    "    x5 = encoder_block(x4, 256, 2)\n",
+    "    \n",
     "    # TODO Add 1x1 Convolution layer using conv2d_batchnorm().\n",
+    "    x5_5 = conv2d_batchnorm(x5,256,kernel_size=1)\n",
     "    \n",
     "    # TODO: Add the same number of Decoder Blocks as the number of Encoder Blocks\n",
-    "    \n",
+    "    x = decoder_block(x5_5, x4, 256)\n",
+    "    x = decoder_block(x, x3, 128)\n",
+    "    x = decoder_block(x, x2, 64)\n",
+    "    x = decoder_block(x, x1, 32)\n",
+    "    x = decoder_block(x, inputs, 16)\n",
     "    \n",
     "    # The function returns the output layer of your model. \"x\" is the final layer obtained from the last decoder_block()\n",
     "    return layers.Conv2D(num_classes, 1, activation='softmax', padding='same')(x)"
@@ -229,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -263,15 +278,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "learning_rate = 0\n",
-    "batch_size = 0\n",
-    "num_epochs = 0\n",
+    "learning_rate = 0.0001\n",
+    "batch_size = 64\n",
+    "num_epochs = 20\n",
     "steps_per_epoch = 200\n",
     "validation_steps = 50\n",
     "workers = 2"
@@ -529,7 +544,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
