Try brute force

--- a/code/model_training.ipynb
+++ b/code/model_training.ipynb
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -217,19 +217,36 @@
     "    x3 = encoder_block(x2, 64, 2)\n",
     "    x4 = encoder_block(x3, 128, 2)\n",
     "    x5 = encoder_block(x4, 256, 2)\n",
+    "    x6 = encoder_block(x5, 512, 2)\n",
     "    \n",
     "    # TODO Add 1x1 Convolution layer using conv2d_batchnorm().\n",
-    "    x5_5 = conv2d_batchnorm(x5,256,kernel_size=1)\n",
+    "    onebyone_conv_layer = conv2d_batchnorm(x6,512,kernel_size=1,strides=1)\n",
     "    \n",
     "    # TODO: Add the same number of Decoder Blocks as the number of Encoder Blocks\n",
-    "    x = decoder_block(x5_5, x4, 256)\n",
-    "    x = decoder_block(x, x3, 128)\n",
-    "    x = decoder_block(x, x2, 64)\n",
-    "    x = decoder_block(x, x1, 32)\n",
-    "    x = decoder_block(x, inputs, 16)\n",
+    "    x6_p = decoder_block(onebyone_conv_layer, x5, 512)\n",
+    "    x5_p = decoder_block(x6_p, x4, 256)\n",
+    "    x4_p = decoder_block(x5_p, x3, 128)\n",
+    "    x3_p = decoder_block(x4_p, x2, 64)\n",
+    "    x2_p = decoder_block(x3_p, x1, 32)\n",
+    "    x1_p = decoder_block(x2_p, inputs, 16)\n",
+    "    \n",
+    "    #======Network Shape========\n",
+    "    print(inputs)\n",
+    "    print(x1)\n",
+    "    print(x2)\n",
+    "    print(x3)\n",
+    "    print(x4)\n",
+    "    print(x5)\n",
+    "    print(onebyone_conv_layer)\n",
+    "    print(x5_p)\n",
+    "    print(x4_p)\n",
+    "    print(x3_p)\n",
+    "    print(x2_p)\n",
+    "    print(x1_p)\n",
+    "    #======Network Shape========\n",
     "    \n",
     "    # The function returns the output layer of your model. \"x\" is the final layer obtained from the last decoder_block()\n",
-    "    return layers.Conv2D(num_classes, 1, activation='softmax', padding='same')(x)"
+    "    return layers.Conv2D(num_classes, 1, activation='softmax', padding='same')(x1_p)"
    ]
   },
   {
@@ -244,17 +261,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tensor(\"input_4:0\", shape=(?, 256, 256, 3), dtype=float32)\n",
+      "Tensor(\"batch_normalization_49/batchnorm/add_1:0\", shape=(?, 128, 128, 16), dtype=float32)\n",
+      "Tensor(\"batch_normalization_50/batchnorm/add_1:0\", shape=(?, 64, 64, 32), dtype=float32)\n",
+      "Tensor(\"batch_normalization_51/batchnorm/add_1:0\", shape=(?, 32, 32, 64), dtype=float32)\n",
+      "Tensor(\"batch_normalization_52/batchnorm/add_1:0\", shape=(?, 16, 16, 128), dtype=float32)\n",
+      "Tensor(\"batch_normalization_53/batchnorm/add_1:0\", shape=(?, 8, 8, 256), dtype=float32)\n",
+      "Tensor(\"batch_normalization_55/batchnorm/add_1:0\", shape=(?, 4, 4, 512), dtype=float32)\n",
+      "Tensor(\"batch_normalization_59/batchnorm/add_1:0\", shape=(?, 16, 16, 256), dtype=float32)\n",
+      "Tensor(\"batch_normalization_61/batchnorm/add_1:0\", shape=(?, 32, 32, 128), dtype=float32)\n",
+      "Tensor(\"batch_normalization_63/batchnorm/add_1:0\", shape=(?, 64, 64, 64), dtype=float32)\n",
+      "Tensor(\"batch_normalization_65/batchnorm/add_1:0\", shape=(?, 128, 128, 32), dtype=float32)\n",
+      "Tensor(\"batch_normalization_67/batchnorm/add_1:0\", shape=(?, 256, 256, 16), dtype=float32)\n"
+     ]
+    }
+   ],
    "source": [
     "\"\"\"\n",
     "DON'T MODIFY ANYTHING IN THIS CELL THAT IS BELOW THIS LINE\n",
     "\"\"\"\n",
     "\n",
-    "image_hw = 160\n",
+    "image_hw = 256\n",
     "image_shape = (image_hw, image_hw, 3)\n",
     "inputs = layers.Input(image_shape)\n",
     "num_classes = 3\n",
@@ -286,7 +320,7 @@
    "source": [
     "learning_rate = 0.001 # 0.0001 - slow\n",
     "batch_size = 256 #512/384 => Exhaust resources\n",
-    "num_epochs = 100\n",
+    "num_epochs = 200\n",
     "steps_per_epoch = 40 #200\n",
     "validation_steps = 5 #50\n",
     "workers = 4"
@@ -2629,7 +2663,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.5.2"
   },
   "widgets": {
    "state": {},
